--- a/baidu/img/sss/index.html
+++ b/baidu/img/sss/index.html
@@ -1,170 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>百度一下，你就知道</title>
-    <div id="mrapper">
-        <!DOCTYPE html>
-        <html>
-
-        <head>
-            <title></title>
-            <style>
-                .s-isindex-wrap {
-                    position: relative;
-                }
-
-                .s-top-wrap {
-                    border-bottom: 0;
-                    height: 60px;
-                    background: #fff;
-                }
-
-                #s_top_wrap {
-                    position: absolute;
-                    z-index: 99;
-                    min-width: 1000px;
-                    width: 100%;
-                }
-
-                #head {
-                    padding-bottom: 100px;
-                    text-align: center;
-                    *z-index: 1:;
-                }
-
-                #head {
-                    position: relative;
-                    padding-bottom: 0px;
-                    height: 100%;
-                    min-height: 600px;
-                }
-
-                #wrapper {
-                    height: 100%;
-                }
-
-                #wrapper {
-                    position: relative;
-                    min-height: 100%;
-                }
-
-                #wrapper {
-                    min-width: 1250px;
-                    height: 100%;
-                    min-height: 600px;
-                }
-
-                blockquote,
-                body,
-                button,
-                dd,
-                dl,
-                dt,
-                fieldset,
-                form,
-                h1,
-                h2,
-                h3,
-                h4,
-                h5,
-                h6,
-                hr,
-                input,
-                legend,
-                li,
-                ol,
-                p,
-                pre,
-                td,
-                textarea,
-                th,
-                ul {
-                    margin: 0;
-                    padding: 0;
-                }
-
-                body,
-                button,
-                input,
-                select,
-                textarea {
-                    font-size: 12px;
-                    font-family: "PingFang SC", Arial, "Microsoft YaHei", sans-serif;
-                }
-
-                body {
-                    text-align: center;
-                    background: #fff;
-                }
-
-                body,
-                form {
-                    position: relative;
-                    z-index: 0;
-                }
-
-                html {
-                    color: #000;
-                    overflow-y: scroll;
-                    overflow: -moz-scrollbars;
-                }
-
-                body,
-                html {
-                    height: 100%;
-                }
-
-                body {
-                    background: #fff;
-                }
-
-                body,
-                form,
-                li,
-                p,
-                ul {
-                    list-style: none;
-                }
-
-                html {
-                    overflow-y: auto;
-                }
-
-                #s_top_wrap .s-top-nav {
-                    position: absolute;
-                    top: 70px;
-                    width: 100%;
-                    min-width: 1250px;
-                    _width: 1000px;
-                    height: 40px;
-                    overflow: hidden;
-                    display: none;
-                }
-
-                #s_top_wrap .s-center-box {
-                    position: relative;
-                    z-index: 1;
-                    width: 100%;
-                    _width: 1000px;
-                    height: 100%;
-                }
-            </style>
-        </head>
-
+    <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
-    <div id="wrapper">
-        <div id="head">
-            <div class="s-top-wrap s-isindex-wrap" id="s_top_wrap" style="left: 0px;">
-                <div class="s-top-nav"></div>
-                <div class="s-center-box"></div>
-            </div>
+    <!--顶部导航-->
+    <div>
+        <div>
+            <ul id="navtop-l">
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">hao123</a></li>
+                <li><a href="#">地图</a></li>
+                <li><a href="#">视频</a></li>
+                <li><a href="#">贴吧</a></li>
+                <li><a href="#">学术</a></li>
+                <li><a href="#">更多</a></li>
+            </ul>
+        </div>
+        <div id="navtop-r">
+            <ul>
+                <li>
+                    <a href="#">抗击肺炎</a>
+                    <a href="#">设置</a>
+                    <a href="#">登陆</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- logo图标 -->
+    <div id="logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
+
+    <!-- 搜索框 -->
+    <div id="serch">
+        <form action="">
+            <input type="text" name="" id="">
+            <input type="button" value="百度一下">
+        </form>
+    </div>
+
+    <!-- 百度热榜 -->
+    <div id="hot">
+        <div id="hot-t">
+            <a href="#"><h2>百度热榜</h2></a>
+            <span><a href="">换一换</a></span>
+        </div id="hot-c">
+        <div>
+            <ul>
+                <li><a href=""><span>1</span><span>热榜标题热榜标题1</span></a></li>
+                <li><a href=""><span>2</span><span>热榜标题热榜标题2</span></a></li>
+                <li><a href=""><span>3</span><span>热榜标题热榜标题3</span></a></li>
+                <li><a href=""><span>4</span><span>热榜标题热榜标题4</span></a></li>
+                <li><a href=""><span>5</span><span>热榜标题热榜标题5</span></a></li>
+                <li><a href=""><span>6</span><span>热榜标题热榜标题6</span></a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- 底部导航 -->
+    <div id="b-nav">
+        <div id="b-nav-l">
+            <ul>
+                <li><a href="">设为首页</a></li>
+                <li><a href="">关于百度</a></li>
+                <li><a href="">About Baidu</a></li>
+                <li><a href="">百度推广</a></li>
+                <li><a href="">使用百度前必读</a></li>
+                <li><a href="">意见反馈</a></li>
+                <li><a href="">帮助中心</a></li>
+            </ul>
+        </div>
+        <div id="b-nav-r">
+            <ul>
+                <li><span>2020 Baidu</span></li>
+                <li><span>(京)-经营性-2017-0020</span></li>
+                <li><a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11000002000001">京公网安备11000002000001号</a></li>
+                <li><span>京ICP证030173号</span></li>
+            </ul>
         </div>
     </div>
 </body>
-
 </html>
-
-</div>
